Better spacing issue fix
Hopefully.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10542,11 +10542,8 @@ a#cartcontentsheader {
 .neto-placeholder-rotator {
   height: 100%;
 }
-.main-container {
-  margin-top: 50px;
-}
-.main-container + .homepage-carousel-wrapper {
-  margin-top: -50px;
+.page-header {
+  margin-top: 25px;
 }
 .carousel-btn {
   margin-top: 10px;
