--- a/src/css/less/_custom.less
+++ b/src/css/less/_custom.less
@@ -945,12 +945,8 @@ a#cartcontentsheader {
   height: 100%;
 }
 
-.main-container {
-  margin-top: 50px;
-}
-
-.main-container + .homepage-carousel-wrapper {
-  margin-top: -50px;
+.page-header {
+  margin-top: 25px;
 }
 
 .carousel-btn {
